--- a/index.css
+++ b/index.css
@@ -1,4 +1,6 @@
-.not-found-container{
+/* index.css */
+
+.products-container {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -9,11 +11,11 @@
 }
 
 /* Styles for the product image */
-.not-found-img {
+.products-img {
   width: 40%;
   max-width: 500px;
   border-radius: 8px; 
   box-shadow: 4px 4px 6px rgba(0, 0, 0, 0.1);
-  background-color: #e9f0fe; 
+  background-color: #fbf2f2; 
 
 }
